--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,19 +1,22 @@
 .Navbar{
-    width:90%;
+    width:100%;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
     text-align: center;
     margin: auto;
     margin-top: 10px;
-    border:1px solid gray;
+    /* border:1px solid gray; */
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     border-radius: 5px;
-    background-color: black;
-    color: white;
+    /* background-color: black;
+    color:white; */
+    padding-top:10px;
+    align-items: center;
 }
 .Navbar>div{
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .Navbar > div:last-child{
     display: flex;
@@ -25,4 +28,15 @@
 .Navbar > div:last-child>p:hover{
     font-weight: bolder;
     text-decoration: underline;
+}
+
+.Navbar > div:last-child>button{
+    border: none;
+    background-color: rgb(25, 25, 80);
+    color: white;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
