--- a/src/components/TextBox.module.css
+++ b/src/components/TextBox.module.css
@@ -14,17 +14,21 @@
 }
 .TextBox > div > Button {
     padding: 5px;
-    border: 1px solid grey;
+    border: none;
     border-radius: 5px;
+    color: black;
     /* background-color: white; */
     background-color: rgba(11, 117, 216, 0.459);
+    padding-left: 5px;
+    padding-right: 5px;
 
 }
 .TextBox > div > button:hover {
-    background-color: rgb(11, 117, 216);
+    background-color: rgb(3, 10, 104);
     color:white;
     border: none;
     border-radius: 5px;
+    border: 1px solid grey;
 }
 .TextBox > div:last-child{
     width: 100%;
