--- a/src/components/TextBox.module.css
+++ b/src/components/TextBox.module.css
@@ -51,3 +51,23 @@
 .TextBox > div:last-child>p{
     margin:0;
 }
+
+
+@media screen and (min-width: 481px) and (max-width: 930px){
+    .TextBox>div{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        gap:10px;
+    }
+    
+}
+@media screen and (max-width: 480px){
+    .TextBox>div{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        gap:10px;
+    }
+    
+}
